Trying to fix left side on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"] {
 
 .left-col {
   border-right: 1px solid black;
+  height: 100vh;
 }
 
 .left-col > .rotated {
